# QtAdmin

./: .gitignore  README.md  README.txt  tasks.txt
DemoProjectWithUI/: CMakeLists.txt
NBAdmin/: AddKeywordForQsci.cpp  BackupWindow.cpp  BackupWindow.hpp  BackupWindow.ui  CMakeLists.txt  ConnectWindow.cpp  ConnectWindow.hpp  ConnectWindow.ui  CreateEdgeTab.cpp  CreateEdgeTab.hpp  CreateEdgeTab.ui  CreateIndexTab.cpp  CreateIndexTab.hpp  CreateIndexTab.ui  CreateTableTab.cpp  CreateTableTab.hpp  CreateTableTab.ui  InfoWindow.hpp  InfoWindow.ui  LoggerFile.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  MessageWindow.cpp  MessageWindow.hpp  MessageWindow.ui  ModifyTableTab.cpp  ModifyTableTab.hpp  ModifyTableTab.ui  NBAdmin.pro  OpenWindow.cpp  OpenWindow.hpp  OpenWindow.ui  QsciLexerNBSQL.hpp  ResponceView.cpp  ResponceView.hpp  RestoreWindow.cpp  RestoreWindow.hpp  RestoreWindow.ui  SyntexHightlight.cpp  (+17 more)
NBAdmin/Qsci/debug/: qscintilla2_qt6d.lib
NBAdmin/Qsci/release/: qscintilla2_qt6.lib
NBAdmin/dep/: res.qrc
NBAdmin_cmake/: BackupWindow.hpp  CMakeLists.txt  ConnectWindow.hpp  ConnectWindow.ui  CreateTableTab.hpp  CreateTableTab.ui  MainWindow.hpp  OpenDb.ui  OpenWindow.hpp  ResponceView.hpp  RestoreWindow.hpp  TabWindow.hpp  backup.ui  backupWindow.hpp  creadb.ui  info.ui  main.cpp  mainwindow.ui  nb-samples.h  nbclient.lib  nitrosbase.h  res.qrc  restore.ui  syntexHightlight.hpp
NBAdmin_win/: Release_Notes.txt  config.conf  dbsInfo.txt  file1.txt  file2.txt
NBAdmin_win_1/: Release_Notes.txt
Qsci/release/: qscintilla2_qt6.lib
build-DemoProjectWithUI-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-DemoProjectWithUI-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-fae1c593336d1c4e8c7c.json  cmakeFiles-v1-a5416188ce477b6f6ade.json  codemodel-v2-be9fe5b8adcf8fcf2647.json
build-DemoProjectWithUI-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: index-2022-11-09T20-22-02-0743.json  target-DemoProjectWithUI-Debug-23d6088e3928f3505eb4.json  target-DemoProjectWithUI_autogen-Debug-050c7c8777f800c235a6.json
build-NBAdmin_cmake-Desktop_Qt_5_12_12_MinGW_64_bit-Release/: config.conf
responceView/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  responceModel.hpp
syntaxHighlightingExample/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  syntexHightlight.hpp
